[package]
name = "rust_ipca"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["rayon", "blas", "matrixmultiply-threading"]}
memmap2 = "0.7.1"
rayon = "1.7.0"
serde = {version = "1.0.188", features = ["derive"]}
colorgrad = "0.6.2"
image = "0.24.7"
serde_json = "1.0.107"
ndarray-linalg = {version = "0.16.0", features = ["intel-mkl-static-lp64-iomp"], path = "ndarray-linalg-master_fork/ndarray-linalg"} # Multicore Version

# ndarray-linalg = {version = "0.16.0", features = ["intel-mkl-static-lp64-seq"], path = "ndarray-linalg-master_fork/ndarray-linalg"} # Sequential Version

[profile.release]
debug = false
opt-level = 3
lto = 'fat'
panic = "abort"
codegen-units = 1
